--- a/webapp/index.html
+++ b/webapp/index.html
@@ -9,6 +9,7 @@
 			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-resourceroots='{"at.clouddna.training00.FioriDeepDive": "./"}'
 			data-sap-ui-compatVersion="edge"
+			data-sap-ui-logLevel="debug"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
 			data-sap-ui-frameOptions="trusted">
